--- a/JarvisApp/.gitignore
+++ b/JarvisApp/.gitignore
@@ -72,4 +72,15 @@ yarn-error.log
 !.yarn/plugins
 !.yarn/releases
 !.yarn/sdks
-!.yarn/versions
+# Vite / Build
+dist/
+out/
+.env
+.env.local
+
+# Logs
+logs/
+*.log
+
+# Coverage
+coverage/
